tests/baselines/reference/genericFunduleInModule.errors.txt
==== tests/cases/compiler/genericFunduleInModule.ts (1 errors) ====
    module A {
        export function B<T>(x: T) { return x; }
        export module B {
            export var x = 1;
        }
    }
    
    var b: A.B;
             ~
!!! genericFunduleInModule.ts(8,10): error TS2094: Property 'B' does not exist on value of type 'A'.
    A.B(1);